# poetry-tests-monorepo

./: README.md  pyproject.toml
bbg_ingest/: pyproject.toml
bbg_ingest/bbg_ingest/: __main__.py
email_ingest/: pyproject.toml
email_ingest/email_ingest/: __main__.py
package_1/: __main__.py  pyproject.toml
package_2/: __main__.py  pyproject.toml
shared/: pyproject.toml
shared/shared/: utils.py
