[tool.poetry]
name = "email-ingest"
version = "0.1.0"
description = ""
authors = ["Denny Biasiolli <dennybiasiolli@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "email_ingest"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
