[tool.poetry]
name = "package-2"
version = "0.1.0"
description = ""
authors = ["Denny Biasiolli <dennybiasiolli@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "package_2"}]

[tool.poetry.dependencies]
python = "^3.10"
shared = {path = "../shared", develop = true}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
